--- a/cv.html
+++ b/cv.html
@@ -1,9 +1,9 @@
 ﻿<!doctype html>
-<html>
 <title>CV-TranDucNguyen</title>
+<html>
 <body>
     <h2>CV TRAN DUC NGUYEN</h2>
-    <img src="https://cdn.discordapp.com/attachments/1072156155947790403/1105027381791563808/image.png" alt="hinh anh" style="width:20"><br />
+    <img src="https://cdn.discordapp.com/attachments/1072156155947790403/1105027381791563808/image.png" alt="hinh anh"><br />
 <p>
 Họ và Tên: Chim Én<br></br>
 Địa chỉ: Cành thứ 2, cây ngô đồng nhà ông Năm<br>
