--- a/cv.html
+++ b/cv.html
@@ -1,6 +1,8 @@
 ﻿<!doctype html>
-<title>CV-TranDucNguyen</title>
 <html>
+<head>
+<title>CV-TranDucNguyen</title>
+</head>
 <body>
     <h2>CV TRAN DUC NGUYEN</h2>
     <img src="https://cdn.discordapp.com/attachments/1072156155947790403/1105027381791563808/image.png" alt="hinh anh"><br />
